--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 - [ ] animation keyboard dismissing (velocity sensitive)
 - [ ] после анимированного закрытия и последующем открытии контент немного фризится
 - [ ] во время анимации клавиатуры можно подскроливать СкролВьюшку (это вообще законно?)
+- [ ] при закрытии клавиатуры контент немного "плавает" относительно текстинпута
+- [ ] scroll view lock position
 
 ## Commands
 
