[RNKC-051] - send two events on Fabric (for now) to keep backward compatibility

--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
 - [ ] CLang formatter
+- [ ] Fabric (iOS) - chat example scroll view bouncing
+- [ ] Fabric (iOS) - no events arrived
+- [ ] Fabric (iOS) - AwareScrollView is not working in
