--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 - [x] Fabric (Android) - no events are arriving in onKeyboardMove callback
 - [ ] CI builds (fabric iOS/Android)
 - [ ] crash on iOS (as soon as open a screen)
-- [ ] remove @ReactMethod on Android (addListener/removeListener)
+- [x] remove @ReactMethod on Android (addListener/removeListener)
 - [ ] Verify how cpp lint works
 - [ ] Fabric (iOS) - KeyboardMoveEvent rewrite to Swift
 - [ ] bump version to 1.2.0
