--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 - [x] remove @ReactMethod on Android (addListener/removeListener)
 - [x] sending ... with no listeners registered - warning (paper)
 - [ ] ???many events instead of single events???
+- [x] resolve all todos
 - [ ] Verify how cpp lint works
 - [ ] Fabric (iOS) - KeyboardMoveEvent rewrite to Swift
 - [ ] bump version to 1.2.0
