--- a/TODO
+++ b/TODO
@@ -6,9 +6,10 @@
 - [x] crash on iOS (as soon as open a screen)
 - [x] remove @ReactMethod on Android (addListener/removeListener)
 - [x] sending ... with no listeners registered - warning (paper)
-- [ ] ???many events instead of single events???
+- [ ] Fabric (iOS) - ???many events instead of single events???
 - [x] resolve all todos
-- [ ] Verify how cpp lint works
+- [x] Fabric (Android) - setHidden causes a crash
+- [x] Verify how cpp lint works
 - [ ] Fabric (iOS) - KeyboardMoveEvent rewrite to Swift
 - [ ] bump version to 1.2.0
 - [ ] prepare blog release
