--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 - [x] check that context handlers reacts to local state changes
 - [ ] check fabric
+- [ ] fix TS
 - [ ] state in events? (open, close, change, interactive)
 - [x] check that values always present in all methods (onStart,onEnd,onMove) in all test cases (close, open, change size)
 - [ ] useKeyboardHandler (with and without adjustResize)
 - [ ] versioned docs
 - [ ] iOS (on hide calls start/end twice)
+- [ ] blog post
