--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 - [x] check that context handlers reacts to local state changes
-- [ ] check fabric
+- [x] check fabric
 - [ ] fix TS
 - [ ] state in events? (open, close, change, interactive)
 - [x] check that values always present in all methods (onStart,onEnd,onMove) in all test cases (close, open, change size)
 - [ ] useKeyboardHandler (with and without adjustResize)
-- [ ] versioned docs
+- [x] versioned docs
 - [ ] iOS (on hide calls start/end twice)
 - [ ] blog post
