--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 - [x] check that context handlers reacts to local state changes
 - [x] check fabric
-- [ ] fix TS
+- [x] fix TS
 - [ ] state in events? (open, close, change, interactive)
 - [x] check that values always present in all methods (onStart,onEnd,onMove) in all test cases (close, open, change size)
 - [ ] useKeyboardHandler (with and without adjustResize)
