[RNKC-061] - resolved one more TODO

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 - [x] fix TS
 - [ ] state in events? (open, close, change, interactive)
 - [x] check that values always present in all methods (onStart,onEnd,onMove) in all test cases (close, open, change size)
-- [ ] useKeyboardHandler (with and without adjustResize)
+- [x] useKeyboardHandler (with and without adjustResize)
 - [x] versioned docs
 - [ ] iOS (on hide calls start/end twice)
 - [ ] blog post
