[RNKC-078] - small updates

--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -64,7 +64,7 @@ Since `onMove` handler on iOS is based on `CADisplayLink` usage - you may need t
     </CodeBlock>
   </div>
   <div>
-    <img src={require('./start2.png').default} />
+    <img src={require('./start.png').default} />
   </div>
 </div>
 
@@ -105,7 +105,7 @@ The same is applied to Android < 11 - these OS versions don't have API for getti
 
 <div class="grid">
   <div style={{paddingRight: 20}}>
-    This function will be called when the keyboard has completed its movement. The event will contain current keyboard metrics.
+    This function will be called when the keyboard has completed its movement. The event will contain <b>current</b> keyboard metrics.
     <br/>
     <br/>
     <CodeBlock
