refactor: keep working

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 1. (x) source in package.json
-2. testing kit
-3. docs
+2. (x) testing kit
+3. (x) docs
 4. (x) unit tests stage in CI
-5. will not mock changes affect other tests?
+5. (x) will not mock changes affect other tests?
 6. update 1.4.0 docs
+7. are testing kit good enough?
