[RNKC-080] - save intermediate changes

--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 - [ ] - linear animation behavior correct?
 - [ ] - documentation
 - [ ] - iOS implementation
+- [ ] - swipe frequently up/down and app becomes to consume a lot of CPU resources
