--- a/docs/versioned_docs/version-1.4.0/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/versioned_docs/version-1.4.0/api/hooks/use-keyboard-handler/index.mdx
@@ -65,12 +65,12 @@ export const onStartCode = (
   </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function is called before the keyboard movement starts. <code>height</code> and <code>progress</code> values will have <b>destination</b> values, i. e. if keyboard was closed but will appear - these values will have a values like "keyboard is already opened" (<code>progress</code> will be equal to <code>1</code> and <code>height</code> will have non-zero value).
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onStartCode}
     </div>
   </div>
@@ -78,7 +78,7 @@ export const onStartCode = (
     <img src={require('./start.png').default} />
   </div>
 </div>
-<div class="mobile">
+<div className="mobile">
   {onStartCode}
 </div>
 
@@ -101,12 +101,12 @@ export const onMoveCode = (
     </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function will be called every frame when the keyboard changes its position.
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onMoveCode}
     </div>
   </div>
@@ -114,7 +114,7 @@ export const onMoveCode = (
     <img src={require('./move.png').default} />
   </div>
 </div>
-<div class="mobile">
+<div className="mobile">
   {onMoveCode}
 </div>
 
@@ -143,12 +143,12 @@ export const onEndCode = (
     </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function will be called when the keyboard has completed its movement. The event will contain <b>current</b> keyboard metrics.
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onEndCode}
     </div>
   </div>
@@ -157,6 +157,6 @@ export const onEndCode = (
   </div>
 </div>
 
-<div class="mobile">
+<div className="mobile">
   {onEndCode}
 </div>
