--- a/TODO
+++ b/TODO
@@ -8,12 +8,15 @@
 - [x] - swipe frequently up/down and app becomes to consume a lot of CPU resources (because of inverted `ScrollView` - used `180deg` instead of `scaleY: -1`)
 - [x] - implement iOS interpolator (for Android)
 - [x] - replicate fix with `180deg` instead of `scaleY: -1` for all other code pieces
-- [ ] - if user swipes and keyboard becomes invisible - we need to send scroll events back to ScrollView
-- [ ] - if you make fast swipe gesture - app behaves a little bit strange/unexpected (because of velocityY > 0 in `animateToFinish`? if user swipes down the value will be > 0, if swipes up < 0);
-- [ ] - swipe keyboard to 50% and release a finger (animation behaves strange, keyboard takes 100% of the height and then animates to the "close" state) - not reproducible on 12/03/2022;
-- [ ] - `ScrollView` lock/unlock - may be not needed, twitches can be because of `fakeView`
+- [x] - if you make fast swipe gesture - app behaves a little bit strange/unexpected (because of velocityY > 0 in `animateToFinish`? if user swipes down the value will be > 0, if swipes up < 0);
 - [x] - `scrollImeOnScreenWhenNotVisible` (allowToShowKeyboardWhenInvisible/showKeyboardOnSwipeUpWhenInvisible/controlKeyboardOnSwipeUpWhenInvisible) and `scrollImeOffScreenWhenVisible` (controlKeyboardOnSwipeDownWhenVisible) should be configurable via react props - allowToDismiss/allowToShow::allowToShowKeyboardFromHiddenStateBySwipeUp?
+- [x] - port changes to fabric architecture;
+- [x] - test fabric app;
+- [x] - swipe keyboard to 50% and release a finger (animation behaves strange, keyboard takes 100% of the height and then animates to the "close" state) - not reproducible on 12/03/2022;
+
+- [ ] - if user swipes and keyboard becomes invisible - we need to send scroll events back to ScrollView (if we don't lock we don't need to carry about it)
+- [ ] - `ScrollView` lock/unlock - may be not needed, twitches can be because of `fakeView`
 - [ ] - linear animation should work the same as in google app example;
 - [ ] - add support for opacity interpolation
-- [ ] - port changes to fabric architecture;
 - [ ] - clean up documentation by google;
+- [ ] - remove println statements
