--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -166,7 +166,7 @@ export const onInteractiveCode = (
   {onInteractiveCode}
 </div>
 
-:::info Availability
+:::info Platform availability
 This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../keyboard-gesture-area).
 :::
 
