--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -15,6 +15,9 @@ useKeyboardHandler(
     onMove: (e) => {
       'worklet';
     },
+    onInteractive: (e) => {
+      'worklet';
+    },
     onEnd: (e) => {
       'worklet';
     },
@@ -25,7 +28,7 @@ useKeyboardHandler(
 
 :::caution Worklet directives
 
-Don't forget to add `worklet` directive to all `onStart`/`onMove`/`onEnd` handlers. Otherwise your code will throw exception.
+Don't forget to add `worklet` directive to all `onStart`/`onMove`/`onInteractive`/`onEnd` handlers. Otherwise your code will throw exception.
 
 These handlers are not workletized by default, since it's not a part of `reanimated` package.
 
@@ -65,12 +68,12 @@ export const onStartCode = (
   </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function is called before the keyboard movement starts. <code>height</code> and <code>progress</code> values will have <b>destination</b> values, i. e. if keyboard was closed but will appear - these values will have a values like "keyboard is already opened" (<code>progress</code> will be equal to <code>1</code> and <code>height</code> will have non-zero value).
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onStartCode}
     </div>
   </div>
@@ -78,7 +81,7 @@ export const onStartCode = (
     <img src={require('./start.png').default} />
   </div>
 </div>
-<div class="mobile">
+<div className="mobile">
   {onStartCode}
 </div>
 
@@ -101,12 +104,12 @@ export const onMoveCode = (
     </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function will be called every frame when the keyboard changes its position.
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onMoveCode}
     </div>
   </div>
@@ -114,7 +117,7 @@ export const onMoveCode = (
     <img src={require('./move.png').default} />
   </div>
 </div>
-<div class="mobile">
+<div className="mobile">
   {onMoveCode}
 </div>
 
@@ -122,6 +125,49 @@ export const onMoveCode = (
 There is no corresponding events in iOS for this hook. So values will not be perfectly synchronized with the keyboard.
 
 The same is applied to Android < 11 - these OS versions don't have API for getting keyboard positions during an animation.
+:::
+
+#### `onInteractive`
+
+export const onInteractiveCode = (
+  <CodeBlock
+      language="ts"
+    >
+      {`useKeyboardHandler(
+  {
+    onInteractive: (e) => {
+      'worklet';
+      progress.value = e.progress;
+      height.value = e.height;
+    }
+  },
+  []
+);`}
+    </CodeBlock>
+);
+
+<div className="grid">
+  <div className="description-block">
+    This function will be called every frame when user changes position of the keyboard by the drag.
+    <br />
+    <br />
+    If finger is released and keyboard animates to its final destination, then the standard <code>onStart</code>/<code>onMove</code>/<code>onEnd</code> lifecycles will be triggered.
+    <br/>
+    <br/>
+    <div className="desktop">
+      {onInteractiveCode}
+    </div>
+  </div>
+  <div>
+    <img src={require('./interactive.png').default} />
+  </div>
+</div>
+<div className="mobile">
+  {onInteractiveCode}
+</div>
+
+:::info Platform availability
+This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../keyboard-gesture-area).
 :::
 
 #### `onEnd`
@@ -143,12 +189,12 @@ export const onEndCode = (
     </CodeBlock>
 );
 
-<div class="grid">
-  <div style={{paddingRight: 20}}>
+<div className="grid">
+  <div className="description-block">
     This function will be called when the keyboard has completed its movement. The event will contain <b>current</b> keyboard metrics.
     <br/>
     <br/>
-    <div class="desktop">
+    <div className="desktop">
       {onEndCode}
     </div>
   </div>
@@ -157,6 +203,6 @@ export const onEndCode = (
   </div>
 </div>
 
-<div class="mobile">
+<div className="mobile">
   {onEndCode}
 </div>
