--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -168,6 +168,8 @@ export const onInteractiveCode = (
 
 :::info Platform availability
 This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../keyboard-gesture-area).
+
+On iOS you need to specify `keyboardDismissMode="interactive"` on your `ScrollView`.
 :::
 
 #### `onEnd`
