--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -166,8 +166,10 @@ export const onInteractiveCode = (
   {onInteractiveCode}
 </div>
 
-:::info Platform availability
+:::info Event availability
 This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../keyboard-gesture-area).
+
+On iOS you need to specify `keyboardDismissMode="interactive"` on your `ScrollView`.
 :::
 
 #### `onEnd`
