docs: added keywords and description for some pages

--- a/docs/docs/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/use-keyboard-handler/index.mdx
@@ -1,3 +1,7 @@
+---
+keywords: [react-native-keyboard-controller, useKeyboardHandler, onStart, onMove, onInteractive, onEnd, react-native-reanimated, worklet, react hook]
+---
+
 import CodeBlock from '@theme/CodeBlock';
 
 # useKeyboardHandler
