--- a/docs/versioned_docs/version-1.5.0/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/versioned_docs/version-1.5.0/api/hooks/use-keyboard-handler/index.mdx
@@ -1,3 +1,7 @@
+---
+keywords: [react-native-keyboard-controller, useKeyboardHandler, onStart, onMove, onInteractive, onEnd, react-native-reanimated, worklet, react hook]
+---
+
 import CodeBlock from '@theme/CodeBlock';
 
 # useKeyboardHandler
