refactor: added keywords for blog posts

--- a/docs/blog/2022-06-22-welcome/index.mdx
+++ b/docs/blog/2022-06-22-welcome/index.mdx
@@ -3,6 +3,7 @@ slug: welcome
 title: React Native meets smooth keyboard animations
 authors: [kirill]
 tags: [react-native, keyboard, animation]
+keywords: [react-native-keyboard-controller, react-native, keyboard, animation]
 ---
 
 Many flagship applications that are written natively (such as `Telegram`, `Instagram`, etc.) use the full power of platform-specific native APIs (`iOS`, `Android`) to make transitions between opening/closing the keyboard animated and smooth.
