--- a/docs/blog/2023-04-10-interactive-keyboard/index.mdx
+++ b/docs/blog/2023-04-10-interactive-keyboard/index.mdx
@@ -3,6 +3,7 @@ slug: interactive-keyboard
 title: Interactive keyboard support
 authors: [kirill]
 tags: [react-native, keyboard, interactive, android, ios]
+keywords: [react-native-keyboard-controller, interactive keyboard, swipe to dismiss keyboard, control keyboard position via gesture]
 ---
 
 I'm excited to announce that the upcoming release of `react-native-keyboard-controller`, version `1.5.0`, will include a new feature that allows users to control the position of the keyboard on the screen via gestures. This new interactive keyboard feature will make it easier for users to interact with the keyboard in a more natural and intuitive way, improving the overall user experience of your React Native app.
