--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@
 - (x) lottie is broken (both iOS/Android)
 - (x) port lottie to Fabric
 - (x) fabric tests port
+- (x) KeyboardAware/Fabric/Android - freeze/crash
+- KeyboardAware/Fabric/Android - no animation
 - remove post install scrip from fabric
 - redmi note 5 pro - chat example laggy
-- KeyboardAware/Fabric/Android - freeze/crash
 - Lottie/Fabric/iOS - missing lottie image
