refactor: changes after rebase

--- a/docs/blog/2023-08-25-enhanced-metadata/index.mdx
+++ b/docs/blog/2023-08-25-enhanced-metadata/index.mdx
@@ -6,8 +6,6 @@ tags: [react-native, keyboard, focused text input, duration]
 keywords: [react-native-keyboard-controller, keyboard, duration, focused text input, focused textinput]
 ---
 
-Please meet a new release of `react-native-keyboard-controller` which enhances events metadata and allows you to apply more advanced techniques when you need to deal with a keyboard handling.
-
 I'm thrilled to unveil the latest upgrade to the `react-native-keyboard-controller` library - version `1.6.0`! This release is all about empowering developers like you with enhanced event metadata, providing you with advanced techniques to take your keyboard handling to the next level.
 
 import Lottie from 'lottie-react';
@@ -39,9 +37,9 @@ Experience the art of animation depth with the `duration` field in event metadat
 
 ## What's next?
 
-As I gear up for the launch of `react-native-keyboard-controller` 1.6.0, I'm also excited to share a sneak peek into what's on the horizon.
+I'm also excited to share a sneak peek into what's on the horizon 😎
 
-I've delved even deeper into keyboard handling, uncovering insights that will shape the way you interact with keyboards in your React Native apps. So my investigation has inspired a new API that will make keyboard interactions more intuitive and seamless. Whether you're a seasoned developer or just starting out, managing keyboards will become a breeze.
+During the `1.6.0` development cycle, I've delved even deeper into keyboard handling, uncovering insights that will shape the way you interact with keyboards in your React Native apps. So my investigation has inspired a new API that will make keyboard interactions more intuitive and seamless. Whether you're a seasoned developer or just starting out, managing keyboards will become a breeze.
 
 Also I will be actively addressing GitHub issues and ensuring compatibility with the latest React Native version. My commitment to excellence means you can rely on a stable and up-to-date library 😊
 
