--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 - (x) port lottie to Fabric
 - (x) fabric tests port
 - (x) KeyboardAware/Fabric/Android - freeze/crash
+- (x) Lottie/Fabric/iOS - missing lottie image
+- (-) remove post install scrip from fabric
 - KeyboardAware/Fabric/Android - no animation
-- remove post install scrip from fabric
 - redmi note 5 pro - chat example laggy
-- Lottie/Fabric/iOS - missing lottie image
