docs: renamed lottie to have suffix .lottie.json

--- a/docs/blog/2023-04-10-interactive-keyboard/index.mdx
+++ b/docs/blog/2023-04-10-interactive-keyboard/index.mdx
@@ -9,7 +9,7 @@ keywords: [react-native-keyboard-controller, interactive keyboard, swipe to dism
 I'm excited to announce that the upcoming release of `react-native-keyboard-controller`, version `1.5.0`, will include a new feature that allows users to control the position of the keyboard on the screen via gestures. This new interactive keyboard feature will make it easier for users to interact with the keyboard in a more natural and intuitive way, improving the overall user experience of your React Native app.
 
 import Lottie from 'lottie-react';
-import lottie from '../../src/components/HomepageFeatures/interactive.json';
+import lottie from '../../src/components/HomepageFeatures/interactive.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
 <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
