--- a/docs/blog/2022-06-22-welcome/index.mdx
+++ b/docs/blog/2022-06-22-welcome/index.mdx
@@ -11,7 +11,7 @@ Many flagship applications that are written natively (such as `Telegram`, `Insta
 Unfortunately, in `react-native` this aspect was given little attention and all `react-native` applications were suffering because of that - animations were rough, you couldn't write cross-platform code because some keyboard events were not available, etc. But with the advent of this library, everything changes... 😎
 
 import Lottie from 'lottie-react';
-import lottie from '../../src/components/HomepageFeatures/transform.json';
+import lottie from '../../src/components/HomepageFeatures/transform.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
 <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
