refactor: rename lottie to `.lottie.json`

--- a/docs/blog/2023-08-25-enhanced-metadata/index.mdx
+++ b/docs/blog/2023-08-25-enhanced-metadata/index.mdx
@@ -9,7 +9,7 @@ keywords: [react-native-keyboard-controller, keyboard, duration, focused text in
 I'm thrilled to unveil the latest upgrade to the `react-native-keyboard-controller` library - version `1.6.0`! This release is all about empowering developers like you with enhanced event metadata, providing you with advanced techniques to take your keyboard handling to the next level.
 
 import Lottie from 'lottie-react';
-import lottie from '../../src/components/HomepageFeatures/text-inputs.json';
+import lottie from '../../src/components/HomepageFeatures/text-inputs.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
 <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
