chore: just another revision of the changes

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 - [x] keyboardVerticalOffset
 - [ ] check how keyboard handle size changes
 - [ ] should work on both platforms in the same way as RN implementation
+- [ ] make UI in example project better :)
+- [ ] android layout jump, when your keyboard was shown/hidden and then you switch to RN impl
 - [ ] import 'react-native-keyboard-controller/components';
