--- a/TODO
+++ b/TODO
@@ -2,11 +2,16 @@
 
 - [x] keyboardVerticalOffset
 - [x] make UI in example project better :)
+- [x] table with lottie is not resizing when screen dimensions were changed - make it responsive
 
 - [ ] check how keyboard handle size changes
-== Android jumpy behavior - should interpolate based on `height` and interpolate from `initialKeyboardFrame` to `finalKeyboardFrame` (android layout jump, when your keyboard was shown/hidden and then you switch to RN impl)
+== [ ] Android jumpy behavior - should interpolate based on `height` and interpolate from `initialKeyboardFrame` to `finalKeyboardFrame`
 
 - [ ] should work on both platforms in the same way as RN implementation
-== iOS works almost as RN (except the case, when we set content as flex: 1 - for header + text inputs and flex: 1 - for button -> in this case inputs are animating only through the half of the movement (because view is not resizing anymore))
+== [ ] iOS works almost as RN (except the case, when we set content as flex: 1 - for header + text inputs and flex: 1 - for button -> in this case inputs are animating only through the half of the movement (because view is not resizing anymore))
+== [ ] android layout jump, when your keyboard was shown/hidden and then you switch to RN impl
 
 - [ ] import 'react-native-keyboard-controller/components';
+- [ ] make KeyboardAvoidingView folder and place different files there -> hooks, constants, KeyboardAvoidingView, etc.
+- [ ] useSmoothKeyboardHandler instead of useKeyboardHandler
+- [ ] port example to Fabric
