chore: change import aliases

--- a/docs/docs/api/components/keyboard-avoiding-view.mdx
+++ b/docs/docs/api/components/keyboard-avoiding-view.mdx
@@ -12,7 +12,7 @@ This new `KeyboardAvoidingView` maintains the familiar React Native [API](https:
 
 Below is a visual difference between the implementations (the animation is _**4x**_ times slower for better visual perception).
 
-import KeyboardAvoidingViewComparison from '../../../src/components/KeyboardAvoidingViewComparison'
+import KeyboardAvoidingViewComparison from '@site/src/components/KeyboardAvoidingViewComparison'
 
 <KeyboardAvoidingViewComparison />
 
