--- a/detox/TODO
+++ b/detox/TODO
@@ -1,3 +1,5 @@
 - [-] setStatusBar doesn't work
 - [x] test buttler APK (Android)
 - [ ] proper build caching (iOS, Android)
+- [ ] matrix strategy for Android
+- [ ] separate assets for local testing only (Android, with google play)
